--- a/app/src/main/res/layout/activity_equipment.xml
+++ b/app/src/main/res/layout/activity_equipment.xml
@@ -32,7 +32,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="parent"
-        android:focusable="true" />
+        android:focusable="true"
+        android:onClick="cont"/>
 
     <ProgressBar
         android:id="@+id/progressBar21"
