--- a/app/src/main/res/layout/dip_item.xml
+++ b/app/src/main/res/layout/dip_item.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/personName"
             android:ellipsize="marquee"
+            android:textColor="#251D1D"
             android:maxLines="2"
             android:padding="15dp"
             android:text="address"
@@ -58,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/line"
+            android:textColor="#251D1D"
             android:padding="10sp"
             android:text="Location"
             android:textSize="12sp"
