--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Service">
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView101"
@@ -33,6 +33,7 @@
         app:layout_constraintHorizontal_bias="0.89"
         app:layout_constraintStart_toStartOf="parent"
         android:onClick="cont"/>
+
     <ProgressBar
         android:id="@+id/progressBar211"
         style="?android:attr/progressBarStyle"
